--- a/files/css/style.css
+++ b/files/css/style.css
@@ -94,7 +94,7 @@ html {
 
 body {
 	font-family: 'PTSansRegular', Helvetica, Arial, sans-serif; font-size:12px; color:#999999; text-align: left; line-height:18px;
-	background: transparent url(../images/background.png);
+	background: transparent url(../images/ios-linen.png);
 	}
 ::selection { background:#2db6cf; color:#fff; }
 ::-moz-selection { background:#2db6cf; color:#fff; }
@@ -775,8 +775,8 @@ nav select option {
 
 .totop {
 	position:fixed;
-	bottom: 30px;
-	right: 30px;
+	bottom: 60px;
+	right: 60px;
 	z-index: 10;
 	
 	width: 30px;
@@ -804,6 +804,7 @@ nav select option {
 ------------------------------------------------*/
 footer {
 	margin-bottom: 60px;
+	color:white;
 	}
 	
 footer .footer_bottom {
