--- a/files/css/style.css
+++ b/files/css/style.css
@@ -3,19 +3,19 @@
 	COLORS:
 
 	default-grey		#999999
-	dark-grey			#595959
-	light-grey			#b3b3b3
+	dark-grey   			#595959
+	light-grey  			#b3b3b3
 	
-	color dark			#2a3233
-	colors blue			#2db6cf
+	color dark 			#2a3233
+	colors blue			#f78547
 	
-	background-grey 	#f7f7f7
+	background-grey	#f7f7f7
 	
 	ON DARK BACKGROUND
 	---------------------------- 
 	font-default		#9fa5a6
-	font-light			#edf4f5
-	font-dark			#555b5d
+	font-light  			#edf4f5
+	font-dark   			#555b5d
 
 -----------------------------------------------------------------------------------
 
@@ -96,9 +96,9 @@ body {
 	font-family: 'PTSansRegular', Helvetica, Arial, sans-serif; font-size:12px; color:#999999; text-align: left; line-height:18px;
 	background: transparent url(../images/ios-linen.png);
 	}
-::selection { background:#2db6cf; color:#fff; }
-::-moz-selection { background:#2db6cf; color:#fff; }
-::-webkit-selection { background:#2db6cf; color:#fff; }	
+::selection { background:#f78547; color:#fff; }
+::-moz-selection { background:#f78547; color:#fff; }
+::-webkit-selection { background:#f78547; color:#fff; }	
 
 
 /* Headings
@@ -147,7 +147,7 @@ div h1:first-child, div h2:first-child, div h3:first-child, div h4:first-child, 
 
 /* Forms
 ---------------------------------------- */
-input[type=text], input[type=password], textarea {
+input[type=text], input[type=password], input, select, textarea {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 10px;
 	background: #ffffff;
@@ -158,7 +158,7 @@ input[type=text], input[type=password], textarea {
 	padding: 0 5px 0 18px;
 	}
 
-input[type=text], input[type=password] { width: 240px; }		/* padding issue (240 + 2*5 = 250) */
+input[type=text], input[type=password] { width: 240px; }                          		/* padding issue (240 + 2*5 = 250) */
 textarea { width: 395px; height: 150px; max-width: 95%; padding: 0 5px 5px 18px; }		/* padding issue (395 + 2*5 = 405) */
 
 input[type=submit] {
@@ -174,11 +174,35 @@ input[type=submit] {
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
+
 	}
+
+	input[type=reset] {
+	font-family: 'PTSansBold',Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	line-height: 30px;
+	height: 30px;
+	padding: 0 15px;
+	color: #ffffff;
+	background: #999999;
+	border: none;
+	cursor: pointer;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	margin-left:30px;
+	}
+
 input[type=submit]:hover { 
-	background: #2db6cf;  
-	}
-	
+                      	background: #f78547;  
+                      	}
+                      	input[type=reset]:hover { 
+                      	background: #f78547;  
+                      	}
+#contact-form select {
+ 	width:200px;
+}	
+
 label {
 	font-family: Helvetica, Arial, sans-serif;
 	display: block;
@@ -234,7 +258,7 @@ form .checkfalse {
 	float: left;
 	}
 	
-#form-note .error_message {
+.error {
 	color: #df2929;
 	line-height: 30px;
 	display: inline-block;
@@ -280,26 +304,26 @@ a {
 	}
 
 a:hover {
-	color: #2db6cf;
+	color: #f78547;
 	}
 	
 .wrapperoverlay a {	color: #edf4f5;	}
-.wrapperoverlay a:hover {	color: #2db6cf;	}
+.wrapperoverlay a:hover {	color: #f78547;	}
 
 a.color {
 	text-decoration: none;
-	color: #2db6cf;
+	color: #f78547;
 	}
 	
 a.color:hover {
 	color: #595959;
 	}
 	
-.wrapperoverlay a.color { color: #2db6cf; }		
+.wrapperoverlay a.color { color: #f78547; }		
 .wrapperoverlay a.color:hover { color: #edf4f5; }		
 	
 a.readmore .readmoreicon {
-	background: #2db6cf url(../images/plus.png) center center no-repeat;
+	background: #f78547 url(../images/plus.png) center center no-repeat;
 	width: 11px;
 	height: 11px;
 	display: inline-block;
@@ -337,11 +361,11 @@ a.themebutton {
 	}
 	
 a.themebutton:hover {
-	background: #2db6cf;
+	background: #f78547;
 	}
 	
 .wrapperoverlay a.themebutton { background: #555b5d; color: #2a3233; }		
-.wrapperoverlay a.themebutton:hover { background: #2db6cf; color: #ffffff; }		
+.wrapperoverlay a.themebutton:hover { background: #f78547; color: #ffffff; }		
 
 
 
@@ -793,7 +817,7 @@ nav select option {
 	}
 	
 .totop:hover {
-	background-color: #2db6cf;
+	background-color: #f78547;
 	opacity: 1.0;
 	filter: alpha(opacity = 100);
 	}
@@ -906,7 +930,7 @@ footer .lightfooter {
 	color: #999999;
 	}
 .filter li a:hover { color: #595959; text-decoration: none;}
-.filter li a.active { color: #2db6cf; }
+.filter li a.active { color: #f78547; }
 
 
 
@@ -1015,20 +1039,20 @@ footer .lightfooter {
 	width: 30px;
 	height: 30px;
 	display: inline-block;
-	background: #2db6cf;
+	background: #f78547;
 	
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
 	}
 	
-.meta_type a.type_quote { background: #2db6cf url(../images/type_quote.png) no-repeat center center; }
-.meta_type a.type_post { background: #2db6cf url(../images/type_post.png) no-repeat center center; }
-.meta_type a.type_image { background: #2db6cf url(../images/type_image.png) no-repeat center center; }
-.meta_type a.type_gallery { background: #2db6cf url(../images/type_gallery.png) no-repeat center center; }
-.meta_type a.type_video { background: #2db6cf url(../images/type_video.png) no-repeat center center; }
-.meta_type a.type_audio { background: #2db6cf url(../images/type_audio.png) no-repeat center center; }
-.meta_type a.type_link { background: #2db6cf url(../images/type_link.png) no-repeat center center; }
+.meta_type a.type_quote { background: #f78547 url(../images/type_quote.png) no-repeat center center; }
+.meta_type a.type_post { background: #f78547 url(../images/type_post.png) no-repeat center center; }
+.meta_type a.type_image { background: #f78547 url(../images/type_image.png) no-repeat center center; }
+.meta_type a.type_gallery { background: #f78547 url(../images/type_gallery.png) no-repeat center center; }
+.meta_type a.type_video { background: #f78547 url(../images/type_video.png) no-repeat center center; }
+.meta_type a.type_audio { background: #f78547 url(../images/type_audio.png) no-repeat center center; }
+.meta_type a.type_link { background: #f78547 url(../images/type_link.png) no-repeat center center; }
 
 .meta_type a:hover { 
 	background-color: #999999;
@@ -1060,7 +1084,7 @@ footer .lightfooter {
 	}
 	
 #pagination a:hover {
-	color: #2db6cf;
+	color: #f78547;
 	}
 	
 #pageloader #pagination, #portfolio #pagination {
@@ -1128,7 +1152,7 @@ Comments
 	width: 30px;
 	height: 30px;
 	display: inline-block;
-	background: #2db6cf url(../images/comments.png) no-repeat center center;
+	background: #f78547 url(../images/comments.png) no-repeat center center;
 	
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
@@ -1159,7 +1183,7 @@ Comments
 	width: 30px;
 	height: 30px;
 	display: inline-block;
-	background: #2db6cf url(../images/leavecomment.png) no-repeat center center;
+	background: #f78547 url(../images/leavecomment.png) no-repeat center center;
 	
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
@@ -1504,7 +1528,7 @@ div .skill:first-child {
 	}
 	
 .skill .skill_bar .skill_active {
-	background: #2db6cf;
+	background: #f78547;
 	height: 100%;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
@@ -1566,7 +1590,7 @@ div .toggle:first-child {
 	}
 	
 .toggle .toggle_title .toggle_icon {
-	background: #2db6cf url(../images/plus.png) center center no-repeat;
+	background: #f78547 url(../images/plus.png) center center no-repeat;
 	width: 11px;
 	height: 11px;
 	display: inline-block;
@@ -1604,7 +1628,7 @@ div .toggle:first-child {
 	
 	
 .price-col {
-	border-top: 5px solid #2db6cf;
+	border-top: 5px solid #f78547;
 	margin-right: 1px;
  	float: left;
 	text-align: center;
@@ -1647,7 +1671,7 @@ div .toggle:first-child {
 	}
 	
 .recommended .price-header h2 {
-	color: #2db6cf;
+	color: #f78547;
 	}
 .best .price-header h2 {	color: #1eb56c; }	
 .standard .price-header h2 {	color: #595959; }
@@ -1674,7 +1698,7 @@ a.signupbutton {
 	padding: 0 15px;
 	color: #ffffff;
 	text-transform: uppercase;
-	background: #2db6cf;
+	background: #f78547;
 	border: none;
 	cursor: pointer;
 	-webkit-border-radius: 2px;
@@ -1717,6 +1741,21 @@ div .widget:first-child {
 #twitter-widget .tweet_avatar {
 	display: none;
 	}	
+
+.tweet{
+	margin-left:30px;
+	
+}
+
+.tweet img{
+	border:0pt none;
+	float:left;
+	max-width:100%;
+	width:auto;
+	position:absolute;
+	left:20px;
+	bottom:12px;
+}
 
 #twitter-widget .tweet-list li {
 	background: url(../images/tweet_grey.png) no-repeat top left;
@@ -1769,7 +1808,7 @@ div .widget:first-child {
 	}
 	
 #flickr-widget .flickr-list li:hover {
-	border: 3px solid #2db6cf;
+	border: 3px solid #f78547;
 	}
 	
 footer #flickr-widget .flickr-list li {
@@ -1796,7 +1835,7 @@ footer #flickr-widget .flickr-list li {
 	}
 	
 #menu-widget ul li a:hover, ul.sidebarmenu li a.active {
-	color: #2db6cf;
+	color: #f78547;
 	}
 	
 	
