--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1955,3 +1955,16 @@ footer #flickr-widget .flickr-list li {
 #portfolio #loader .wrapper div span {
 	display: none;
 	}
+
+a#logo1 {
+	font-family:"Rockwell Condensed";
+	font-size:18px;
+	font-weight: bold;
+}
+
+a#logo2{
+	font-family:"Rockwell Condensed";
+
+	font-size:12px;
+	color: rgb(89,89,89);
+}
