--- a/files/css/mqueries.css
+++ b/files/css/mqueries.css
@@ -127,7 +127,7 @@ div.jp-audio div.jp-type-single div.jp-progress-container {	width:160px;}
 }
 
 
-/* QUERIES FOR IHONE/SMARTPHONES */
+/* QUERIES FOR IPHONE/SMARTPHONES */
 @media only screen and (max-width: 767px), only screen and (max-device-width: 480px), only screen and (max-width: 767px) {
 
 
@@ -153,8 +153,8 @@ Top
 /*---------------------------------------------- 
 Logo
 ------------------------------------------------*/
-#logo	     	{ float: none; width: 100%; text-align:center; margin-bottom: 40px; }
-#logo a	     	{ display: inline-block; }
+#logo  		{ float: none; width: 100%; text-align:center; margin-bottom: 40px; }
+#logo a		{ display: inline-block; }
 
 
 /*---------------------------------------------- 
