--- a/files/css/style.css
+++ b/files/css/style.css
@@ -94,7 +94,7 @@ html {
 
 body {
 	font-family: 'PTSansRegular', Helvetica, Arial, sans-serif; font-size:12px; color:#999999; text-align: left; line-height:18px;
-	background: transparent url(../images/ios-linen.png);
+	background: transparent url(../images/type2.png);
 	}
 ::selection { background:#f78547; color:#fff; }
 ::-moz-selection { background:#f78547; color:#fff; }
