--- a/files/css/mqueries.css
+++ b/files/css/mqueries.css
@@ -10,8 +10,8 @@ textarea { width: 277px; }		/* padding issue (320 + 2*5 = 330) */
 /*---------------------------------------------- 
 General ID's or Classes
 ------------------------------------------------*/
-.wrapper { width: 640px; }
-.wrapperoverlay {width: 640px; }
+.wrapper { width: 677px; }
+.wrapperoverlay {width: 677px; }
 #sidebar { width: 180px; }
 #maincontent { width: 420px; }
 
@@ -80,7 +80,7 @@ Leave Comments
 Columns
 ------------------------------------------------*/
 .one_full { width: 100%; }
-.one_half  { width: 310px; }
+.one_half  { width: 327px; }
 .one_third { width: 200px; }
 .two_third { width: 420px; }
 .one_fourth { width: 145px; }
@@ -125,13 +125,10 @@ div.jp-audio div.jp-type-single div.jp-progress-container {	width:160px;}
 
 
 }
-
-
 /* QUERIES FOR IPHONE/SMARTPHONES */
 @media only screen and (max-width: 767px), only screen and (max-device-width: 480px), only screen and (max-width: 767px) {
 
-body{background: transparent url(../images/type2.png);}
-
+/*body{background: transparent url(../images/type2.png);}
 
 
 /* Forms
