--- a/files/css/style.css
+++ b/files/css/style.css
@@ -94,7 +94,7 @@ html {
 
 body {
 	font-family: 'PTSansRegular', Helvetica, Arial, sans-serif; font-size:12px; color:#999999; text-align: left; line-height:18px;
-	background: transparent url(../images/type2.png);
+	background: transparent url(../images/type3.png);
 	}
 ::selection { background:#f78547; color:#fff; }
 ::-moz-selection { background:#f78547; color:#fff; }
@@ -105,7 +105,7 @@ body {
 ---------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'PTSansRegular',Helvetica, Arial, sans-serif;
-	color: #595959;
+	color: #545d61;
 	font-weight: normal;
 	}
 
@@ -376,9 +376,14 @@ img, object, video {
 	height: auto;
 	display:block;
 	}
+
+li.start{
+	width:100px;
+}
+
 	
 img {
-	width: auto;
+	width: 100%;
 	max-width: 100%; 
 	border: 0;
 	-ms-interpolation-mode: bicubic;
@@ -594,7 +599,7 @@ div pre:first-child {
 3. Header
 ------------------------------------------------*/
 header {
-	margin-top:70px;			/* Same as height from #top */
+	margin-top:50px;			/* Same as height from #top */
 	}
 	
 header .header_inner {
@@ -621,7 +626,7 @@ header .header_inner {
 4. Top
 ------------------------------------------------*/
 #top {	                 	
-      	min-height: 70px;				/* Same as margin-top from header */
+      	min-height: 50px;				/* Same as margin-top from header */
       	position: absolute;
       	left: 0;
       	width: 100%;
@@ -1732,7 +1737,7 @@ div .widget:first-child {
 	}
 
 #top .widget {
-	line-height: 30px;
+	line-height: 20px;
 }
 
 
@@ -1956,3 +1961,10 @@ footer #flickr-widget .flickr-list li {
 #portfolio #loader .wrapper div span {
 	display: none;
 	}
+
+.svg{
+	bottom:20px;
+margin:10px;
+position:relative;
+
+}
